k8s/password-generator-template.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: apps
  name: apps
spec:
  finalizers:
  - kubernetes
---
apiVersion: v1
kind: Service
metadata:
  name: password-generator
  namespace: REPLACE_WITH_NS
  labels:
    app: password-generator
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  clusterIP: None
  selector:
    app: password-generator
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: password-generator
  namespace: REPLACE_WITH_NS
spec:
  serviceName: password-generator
  selector:
    matchLabels:
      app: password-generator
  replicas: 1
  template:
    metadata:
      labels:
        app: password-generator
    spec:
      containers:
      - env:
        - name: FQDN
          value: REPLACE_WITH_FQDN
        - name: APP_PATH
          value: REPLACE_WITH_APP_PATH
        name: password-generator
        image: david62243/password-generator:v1.0
        imagePullPolicy: Always
        resources: {}
        command:
        - sh
        - -c
        - "python3 password_generator_application/manage.py migrate;python3 password_generator_application/manage.py runserver 0.0.0.0:8080"
        volumeMounts:
        - name: password-generator-vol
          mountPath: /home/duser/django
      volumes:
      - name: password-generator-vol
        persistentVolumeClaim:
          claimName: password-generator-claim
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: apps-vs
  namespace: REPLACE_WITH_NS
spec:
  gateways:
  - default/bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /REPLACE_WITH_APP_PATH
    route:
    - destination:
        host: password-generator
        port:
          number: 8080
      headers:
        response:
          add:
            Strict-Transport-Security: max-age=63072000; includeSubDomains; preload
